calibre/calibre-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: calibre.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre-ui-service
            port:
              number: 8080
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - calibre.erix-homelab.site
